# actix_web_app

./: .env.example  .gitignore  Cargo.toml  LICENSE
src/: main.rs
src/app/: mod.rs
src/app/api/: mod.rs
src/app/api/v1/: mod.rs
src/app/api/v1/user/: login.rs  mod.rs  registration.rs
static/: index.html
