[package]
name = "actix-app"
version = "0.1.0"
authors = ["smodean"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix = "0.9.0"
actix-rt = "1"
actix-files = "0.2.1"
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.7.1"
validator = "0.10.0"
validator_derive = "0.10.0"
